make some secitons

--- a/index.html
+++ b/index.html
@@ -109,6 +109,92 @@
           </ul>
         </div>
       </section>
+
+      <section class="challenging">
+        <div class="container">
+          <div class="challenging-container">
+            <h2 class="challenging-title">
+              We Tackle The Most Challenging Designs
+            </h2>
+            <p class="challenging-info">
+              The world needs innovators and problem solvers who turn challenges
+              into greater opportunities. We have an insatiable curiosity about
+              transformative trends challenging the status.
+            </p>
+            <div class="contact">
+              <a href="#" class="challenging-icon">
+                <svg width="34" height="34">
+                  <use href="./icon/symbol-defs.svg#icon-tel"></use>
+                </svg>
+              </a>
+              <div class="contact-wrapper">
+                <p class="tel">012345678</p>
+                <p class="call-us">Call Us Anytime</p>
+              </div>
+            </div>
+            <button type="button" class="challenging-btn">
+              Get Free Estimate
+              <svg class="btn-icon" width="30" height="30">
+                <use href="./icon/symbol-defs.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <img src="./images/call-us.png" />
+        </div>
+      </section>
+
+      <section class="comment">
+        <div class="contaner">
+          <h2 class="comment-title">What people Thinks About Interno</h2>
+          <ul class="comment-list">
+            <li class="comment-item">
+              <div class="item-container">
+                <img src="./images/lisa.png" />
+                <div>
+                  <h3 class="list-title">Lisa Clairton</h3>
+                  <address>
+                    <p class="person-location">New York, USA</p>
+                  </address>
+                </div>
+              </div>
+              <p class="list-text">
+                We selected Interno interior because of rigorous desing
+                background & education.
+              </p>
+            </li>
+            <li class="comment-item">
+              <div class="item-container">
+                <img src="./images/david.png" />
+                <div>
+                  <h3 class="list-title">David Knight</h3>
+                  <address>
+                    <p class="person-location">Sydney, Australia</p>
+                  </address>
+                </div>
+              </div>
+              <p class="list-text">
+                The team exceeded our expectations and emerged as leaders of our
+                project's
+              </p>
+            </li>
+            <li class="comment-item">
+              <div class="item-container">
+                <img src="./images/calairton.png" />
+                <div>
+                  <h3 class="list-title">Lisa Clairton</h3>
+                  <address>
+                    <p class="person-location">Paris, France</p>
+                  </address>
+                </div>
+              </div>
+              <p class="list-text">
+                They balanced the architectural vision and the project realities
+                beautifully.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
