end sections until blogs

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <section class="comment">
         <div class="contaner">
-          <h2 class="comment-title">What people Thinks About Interno</h2>
+          <h2 class="comment-title">What the People Thinks About Interno</h2>
           <ul class="comment-list">
             <li class="comment-item">
               <div class="item-container">
@@ -191,6 +191,197 @@
                 They balanced the architectural vision and the project realities
                 beautifully.
               </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="brands">
+        <div class="container">
+          <ul class="brands-list">
+            <li class="brands-item">
+              <a href="#" class="brands-link"
+                ><img src="./images/brand-1.png" alt=""
+              /></a>
+            </li>
+            <li class="brands-item">
+              <a href="#" class="brands-link"
+                ><img src="./images/brand-2.png" alt=""
+              /></a>
+            </li>
+            <li class="brands-item">
+              <a href="#" class="brands-link"
+                ><img src="./images/brand-3.png" alt=""
+              /></a>
+            </li>
+            <li class="brands-item">
+              <a href="#" class="brands-link"
+                ><img src="./images/brand-4.png" alt=""
+              /></a>
+            </li>
+            <li class="brands-item">
+              <a href="#" class="brands-link"
+                ><img src="./images/brand-5.png" alt=""
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="projects">
+        <div class="container">
+          <h2 class="projects-title">Recent Projects</h2>
+          <p class="projects-info">
+            With tools to make every part of your process more human and support
+            team ecxited to help, you getting started with us never been easier
+          </p>
+          <ul class="projects-list">
+            <li class="projects-item">
+              <img src="./images/winery.png" />
+              <div class="item-container">
+                <div class="wrapper">
+                  <h3 class="item-title">Winery Dry Creek Building</h3>
+                  <p class="item-type">Art Modem</p>
+                </div>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/workplace.png" />
+              <div class="item-container">
+                <div class="wrapper">
+                  <h3 class="item-title">Creative Workplace Design</h3>
+                  <p class="item-type">Minimalist</p>
+                </div>
+                <a href="#" class="item-more">
+                  <svg class="more-icon" width="9" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/bedroom.png" />
+              <div class="item-container">
+                <div class="wrapper">
+                  <h3 class="item-title">Bedroom Interior Pot Work</h3>
+                  <p class="item-type">Modern</p>
+                </div>
+                <a href="#" class="item-more">
+                  <svg class="more-icon" width="9" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/sepia.png" />
+              <div class="item-container">
+                <div class="wrapper">
+                  <h3 class="item-title">Light Ambience Sepia Design</h3>
+                  <p class="item-type">Scandinavian</p>
+                </div>
+                <a href="#" class="item-more">
+                  <svg class="more-icon" width="9" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="static">
+        <div class="container">
+          <ul class="static-list">
+            <li class="static-item">
+              <div>
+                <span>12</span>
+                <p class="static-info">Years of Experience</p>
+              </div>
+            </li>
+            <li class="static-item">
+              <div>
+                <span>5K</span>
+                <p class="static-info">Success Project</p>
+              </div>
+            </li>
+            <li class="static-item">
+              <div>
+                <span>1K</span>
+                <p class="static-info">Active Poject</p>
+              </div>
+            </li>
+            <li class="static-item">
+              <div>
+                <span>4K</span>
+                <p class="static-info">Happy Customers</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="blogs">
+        <div class="container">
+          <h2 class="blogs-title">Recent Blogs</h2>
+          <p class="blogs-info">
+            Get updates about our last trends and techniques used in interior
+            design project works.
+          </p>
+          <ul class="blogs-list">
+            <li class="blogs-item">
+              <img src="./images/blog.png" />
+              <p class="interior-type">Kitchen Design</p>
+              <h3 class="item-title">
+                Residential Interior Design In New York, USA
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
+            </li>
+            <li class="blogs-item">
+              <img src="./images/blog-2.png" />
+              <p class="interior-type">Living room</p>
+              <h3 class="item-title">
+                How To Choose The Best Wall Art & Decor House?
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
+            </li>
+            <li class="blogs-item">
+              <img src="./images/blog-3.png" />
+              <p class="interior-type">Minimalist Interior</p>
+              <h3 class="item-title">
+                Tips To Increase The Interior Value Of Your House
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
+            </li>
+            <li class="blogs-item">
+              <img src="./images/blog-4.png" />
+              <p class="interior-type">Kitchen Design</p>
+              <h3 class="item-title">
+                Best Solutuion For Any Office & Businedd Interior
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
+            </li>
+            <li class="blogs-item">
+              <img src="./images/blog-5.png" />
+              <p class="interior-type">Living Room</p>
+              <h3 class="item-title">
+                Get Solutin For Building Construction Work
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
+            </li>
+            <li class="blogs-item">
+              <img src="./images/blog-6.png" />
+              <p class="interior-type">Minimalist Interior</p>
+              <h3 class="item-title">
+                Attain The Best Finish For The Kitchen Cabinets
+              </h3>
+              <p class="blogs-data">November 23, 2021</p>
             </li>
           </ul>
         </div>
