make form and blog section

--- a/index.html
+++ b/index.html
@@ -336,54 +336,116 @@
           </p>
           <ul class="blogs-list">
             <li class="blogs-item">
-              <img src="./images/blog.png" />
-              <p class="interior-type">Kitchen Design</p>
+              <div class="type-container">
+                <img src="./images/blog.png" />
+                <p class="interior-type">Kitchen Design</p>
+              </div>
               <h3 class="item-title">
                 Residential Interior Design In New York, USA
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="blogs-item">
-              <img src="./images/blog-2.png" />
-              <p class="interior-type">Living room</p>
+              <div class="type-container">
+                <img src="./images/blog-2.png" />
+                <p class="interior-type">Living room</p>
+              </div>
               <h3 class="item-title">
                 How To Choose The Best Wall Art & Decor House?
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="blogs-item">
-              <img src="./images/blog-3.png" />
-              <p class="interior-type">Minimalist Interior</p>
+              <div class="type-container">
+                <img src="./images/blog-3.png" />
+                <p class="interior-type">Minimalist Interior</p>
+              </div>
               <h3 class="item-title">
                 Tips To Increase The Interior Value Of Your House
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="blogs-item">
-              <img src="./images/blog-4.png" />
-              <p class="interior-type">Kitchen Design</p>
+              <div class="type-container">
+                <img src="./images/blog-4.png" />
+                <p class="interior-type">Kitchen Design</p>
+              </div>
               <h3 class="item-title">
                 Best Solutuion For Any Office & Businedd Interior
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="blogs-item">
-              <img src="./images/blog-5.png" />
-              <p class="interior-type">Living Room</p>
+              <div class="type-container">
+                <img src="./images/blog-5.png" />
+                <p class="interior-type">Living Room</p>
+              </div>
               <h3 class="item-title">
                 Get Solutin For Building Construction Work
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="blogs-item">
-              <img src="./images/blog-6.png" />
-              <p class="interior-type">Minimalist Interior</p>
+              <div class="type-container">
+                <img src="./images/blog-6.png" />
+                <p class="interior-type">Minimalist Interior</p>
+              </div>
               <h3 class="item-title">
                 Attain The Best Finish For The Kitchen Cabinets
               </h3>
-              <p class="blogs-data">November 23, 2021</p>
+              <div class="data-container">
+                <p class="blogs-data">November 23, 2021</p>
+                <a href="#" class="item-more">
+                  <svg class="more-item" width="10" height="16">
+                    <use href="./icon/symbol-defs.svg#icon-next"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="contact">
+        <div class="container">
+          <h2 class="contact-title">Wanna join the interno?</h2>
+          <p class="contact-info">Contact Us & Get a Free Consultation</p>
+          <button type="button" class="contact-btn">Contact with us</button>
         </div>
       </section>
     </main>
