--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </section>
 
       <section class="comment">
-        <div class="contaner">
+        <div class="container">
           <h2 class="comment-title">What the People Thinks About Interno</h2>
           <ul class="comment-list">
             <li class="comment-item">
@@ -449,6 +449,116 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="footer-logo">
+            <svg width="177" height="50">
+              <use href="./icon/symbol-defs.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <p class="footer-descrption">
+            We are leading architect and interior design firm in the world
+          </p>
+          <ul class="social-media">
+            <li class="media-item">
+              <a href="#" class="media-icon">
+                <svg width="10" height="19" class="icon">
+                  <use href="./icon/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="#" class="media-icon">
+                <svg width="18" height="15" class="icon">
+                  <use href="./icon/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="#">
+                <svg width="16" height="17" class="icon">
+                  <use href="./icon/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="#">
+                <svg width="17" height="18" class="icon">
+                  <use href="./icon/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <ul class="item-list">
+              <li class="second-item"><p class="item-title">Pages</p></li>
+              <li class="second-item">
+                <a href="#" class="item-link">Style Guide</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Protected</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Licenses</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Changelog</a>
+              </li>
+              <li class="second-item"><a href="#" class="item-link">404</a></li>
+            </ul>
+          </li>
+
+          <li class="footer-item">
+            <ul class="item-list explore">
+              <li class="second-item"><p class="item-title">Explore</p></li>
+              <li class="second-item">
+                <a href="#" class="item-link">About Us</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Recent Blog</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Pricing Plan</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Our Projects</a>
+              </li>
+              <li class="second-item">
+                <a href="#" class="item-link">Contact Us</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="footer-item">
+            <ul class="item-list">
+              <li class="second-item"><p class="item-title">Contact</p></li>
+              <li class="second-item">
+                <a href="#" class="item-link location"
+                  >53, East Birchwood Ave. Brooklyn, New Yourk 11201, USA</a
+                >
+              </li>
+              <li class="second-item">
+                <a href="mailto:contact@interno.com" class="item-link"
+                  >contact@interno.com</a
+                >
+              </li>
+              <li class="second-item">
+                <a href="tel:+1234567890" class="item-link">(123) 456 - 7890</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <small class="copyright">
+        <a href="#" class="copyright-link"
+          >Copyright &#169; Interno | Design by
+          <span>Victorflow </span>Templates - Powered by <span>Webflow</span></a
+        >
+      </small>
+    </footer>
     <footer></footer>
   </body>
 </html>
