start making adaptive layout

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </svg>
             </button>
           </div>
-          <img src="./images/call-us.png" />
+          <img src="./images/call-us.png" class="challengeing-img" />
         </div>
       </section>
 
