fix adaptive in css

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </section>
 
       <section class="comment">
-        <div class="container">
+        <div class="container comment-contaniner">
           <h2 class="comment-title">What the People Thinks About Interno</h2>
           <ul class="comment-list">
             <li class="comment-item">
