--- a/index.html
+++ b/index.html
@@ -23,12 +23,83 @@
   </head>
   <body>
     <header>
+      <!-- Desktop -->
       <div class="container header-container">
         <a href="index.html" class="header-logo">
           <svg class="icon-logo" width="177" height="50">
             <use href="./icon/symbol-defs.svg#icon-logo"></use>
           </svg>
         </a>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Pages</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Mobile Open -->
+      <div class="container-mobile">
+        <a href="index.html" class="header-logo">
+          <svg class="icon-logo" width="177" height="50">
+            <use href="./icon/symbol-defs.svg#icon-logo"></use>
+          </svg>
+        </a>
+        <button
+          type="button"
+          class="js-open-menu menu-open"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            style="fill: rgba(0, 0, 0, 1)"
+            class="open-icon"
+          >
+            <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile -->
+      <div class="js-menu-container menu-container" id="mobile-menu">
+        <div class="container-mobile mb-container">
+          <a href="index.html" class="header-logo">
+            <svg class="icon-logo" width="177" height="50">
+              <use href="./icon/symbol-defs.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <button class="close-btn js-close-menu" type="button">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              style="fill: rgba(0, 0, 0, 1)"
+              class="icon-close"
+            >
+              <path
+                d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"
+              ></path>
+            </svg>
+          </button>
+        </div>
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
@@ -560,5 +631,6 @@
       </small>
     </footer>
     <footer></footer>
+    <script type="module" src="./js/mobile.js"></script>
   </body>
 </html>
